--- a/src/Adbp.Sample.Core/Adbp.Sample.Core.csproj
+++ b/src/Adbp.Sample.Core/Adbp.Sample.Core.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Adbp.Sample</RootNamespace>
     <AssemblyName>Adbp.Sample.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -192,7 +192,9 @@
     <EmbeddedResource Include="Localization\Source\Sample.xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
