1. 组织机构和组织机构用户增加自定义字段  2. 优化组织机构使之更灵活 3.UserAgent->LoginAgent 4.新增用户且只有在第一次从Ldap中获取时才同步姓名

--- a/src/Adbp.Zero.Core/Adbp.Zero.Core.csproj
+++ b/src/Adbp.Zero.Core/Adbp.Zero.Core.csproj
@@ -188,10 +188,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authorization\Users\UserAgent.cs" />
+    <Compile Include="Authorization\Users\LoginAgent.cs" />
     <Compile Include="Emails\Email.cs" />
     <Compile Include="Notifications\ZeroNotificationNames.cs" />
     <Compile Include="Notifications\ZeroNotificationProvider.cs" />
+    <Compile Include="OrganizationUnits\OrganizationUnitExtensions.cs" />
+    <Compile Include="OrganizationUnits\ZeroOrganizationUnitManager.cs" />
+    <Compile Include="OrganizationUnits\ZeroUserOrganizationUnit.cs" />
     <Compile Include="SysObjectSettings\SysColumnSettingInfo.cs" />
     <Compile Include="SysObjectSettings\SysObjectSetting.cs" />
     <Compile Include="SysObjectSettings\SysObjectSettingInfo.cs" />
@@ -221,10 +224,14 @@
     <Compile Include="ZeroLdapAuthenticationSource.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Localization\Source\AdbpZero-zh-Hans.xml" />
+    <EmbeddedResource Include="Localization\Source\AdbpZero-zh-Hans.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Localization\Source\AdbpZero.xml" />
+    <EmbeddedResource Include="Localization\Source\AdbpZero.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
